--- a/Vagrant/ambiente_dev/bionic/Vagrantfile
+++ b/Vagrant/ambiente_dev/bionic/Vagrantfile
@@ -3,4 +3,5 @@ Vagrant.configure("2") do |config|
     config.vm.network "forwarded_port", guest: 80, host: 8089
     config.vm.network "private_network", ip: "192.168.50.4"
     config.vm.provision "shell", inline: "echo Hello, World"
+    config.vm.synced_folder "./configs", "/configs"
   end
