--- a/Vagrant/ambiente_dev/bionic/Vagrantfile
+++ b/Vagrant/ambiente_dev/bionic/Vagrantfile
@@ -2,6 +2,7 @@ Vagrant.configure("2") do |config|
     config.vm.box = "ubuntu/bionic64"
     config.vm.network "forwarded_port", guest: 80, host: 8089
     config.vm.network "private_network", ip: "192.168.50.4"
-    config.vm.provision "shell", inline: "echo Hello, World"
+    config.vm.provision "shell", inline: "cat /configs/id_bionic.pub >> .ssh/authorized_keys"
     config.vm.synced_folder "./configs", "/configs"
+    config.vm.synced_folder ".", "/vagrant", disabled: true
   end
