--- a/Vagrant/ambiente_dev/bionic/Vagrantfile
+++ b/Vagrant/ambiente_dev/bionic/Vagrantfile
@@ -1,8 +1,18 @@
+$script_mysql = <<-'SCRIPT'
+  apt-get update && \
+  apt-get install -y mysql-server-5.7 && \
+  mysql -e "create user 'phpuser'@'%' identified by 'pass';"
+SCRIPT
+
 Vagrant.configure("2") do |config|
     config.vm.box = "ubuntu/bionic64"
     config.vm.network "forwarded_port", guest: 80, host: 8089
     config.vm.network "private_network", ip: "192.168.50.4"
-    config.vm.provision "shell", inline: "cat /configs/id_bionic.pub >> .ssh/authorized_keys"
+
+    config.vm.provision "shell", 
+      inline: "cat /configs/id_bionic.pub >> .ssh/authorized_keys"
+    config.vm.provision "shell", inline: $script_mysql
+
     config.vm.synced_folder "./configs", "/configs"
     config.vm.synced_folder ".", "/vagrant", disabled: true
   end
