--- a/Vagrant/ambiente_dev/bionic/Vagrantfile
+++ b/Vagrant/ambiente_dev/bionic/Vagrantfile
@@ -9,9 +9,14 @@ Vagrant.configure("2") do |config|
     config.vm.network "forwarded_port", guest: 80, host: 8089
     config.vm.network "private_network", ip: "192.168.50.4"
 
+    config.vm.provision "shell", inline: $script_mysql
+
     config.vm.provision "shell", 
       inline: "cat /configs/id_bionic.pub >> .ssh/authorized_keys"
-    config.vm.provision "shell", inline: $script_mysql
+    config.vm.provision "shell", 
+      inline: "cat /configs/mysqld.cnf > /etc/mysql/mysql.conf.d/mysqld.cnf"
+    config.vm.provision "shell", 
+      inline: "service restart mysql"
 
     config.vm.synced_folder "./configs", "/configs"
     config.vm.synced_folder ".", "/vagrant", disabled: true
