--- a/Vagrant/ambiente_dev/bionic/Vagrantfile
+++ b/Vagrant/ambiente_dev/bionic/Vagrantfile
@@ -6,18 +6,34 @@ SCRIPT
 
 Vagrant.configure("2") do |config|
     config.vm.box = "ubuntu/bionic64"
-    config.vm.network "forwarded_port", guest: 80, host: 8089
-    config.vm.network "private_network", ip: "192.168.50.4"
 
-    config.vm.provision "shell", inline: $script_mysql
+    config.vm.define "mysqldb" do |mysql|
+      mysql.vm.network "private_network", ip: "192.168.50.4"
 
-    config.vm.provision "shell", 
-      inline: "cat /configs/id_bionic.pub >> .ssh/authorized_keys"
-    config.vm.provision "shell", 
-      inline: "cat /configs/mysqld.cnf > /etc/mysql/mysql.conf.d/mysqld.cnf"
-    config.vm.provision "shell", 
-      inline: "service restart mysql"
+      mysql.vm.provision "shell", inline: $script_mysql
 
-    config.vm.synced_folder "./configs", "/configs"
-    config.vm.synced_folder ".", "/vagrant", disabled: true
+      mysql.vm.provision "shell", 
+        inline: "cat /configs/id_bionic.pub >> .ssh/authorized_keys"
+        mysql.vm.provision "shell", 
+        inline: "cat /configs/mysqld.cnf > /etc/mysql/mysql.conf.d/mysqld.cnf"
+        mysql.vm.provision "shell", 
+        inline: "service mysql restart"
+
+      mysql.vm.synced_folder "./configs", "/configs"
+      mysql.vm.synced_folder ".", "/vagrant", disabled: true
+    end
+
+    config.vm.define "phpweb" do |phpweb|
+      phpweb.vm.network "forwarded_port", guest: 8888, host: 8888
+      phpweb.vm.network "private_network", ip: "192.168.50.4"
+
+      phpweb.vm.provision "shell", 
+        inline: "apt-get update && apt-get install -y puppet"
+
+      phpweb.vm.provision "puppet" do |puppet|
+        puppet.manifests_path = "./configs/manifest"
+        puppet.manifest_file = "phpweb.pp"
+      end
+    end
+    
   end
