--- a/Vagrant/ambiente_dev/bionic/Vagrantfile
+++ b/Vagrant/ambiente_dev/bionic/Vagrantfile
@@ -36,4 +36,26 @@ Vagrant.configure("2") do |config|
       end
     end
     
+    config.vm.define "mysqlserver" do |mysqlserver|
+      mysqlserver.vm.network "private_network", ip: "192.168.50.4"
+
+      mysqlserver.vm.provision "shell",
+        inline: "cat /vagrant/configs/id_bionic.pub >> .ssh/authorized_keys"
+    end
+
+    config.vm.define "ansible" do |ansible|
+      ansible.vm.network "private_network", ip: "192.168.50.4"
+
+      ansible.vm.provision "shell",
+        inline: "cp /vagrant/id_bionic  /home/vagrant && \
+                chmod 600 /home/vagrant/id_bionic"
+
+      ansible.vm.provision "shell",
+        inline: "apt-get update && \
+                apt-get install -y software-properties-common && \
+                apt-add-repository --yes --update ppa:ansible/ansible && \
+                apt-get install -y ansible"
+    end
+
+
   end
