--- a/Vagrant/ambiente_dev/bionic/Vagrantfile
+++ b/Vagrant/ambiente_dev/bionic/Vagrantfile
@@ -8,7 +8,7 @@ Vagrant.configure("2") do |config|
     config.vm.box = "ubuntu/bionic64"
 
     config.vm.define "mysqldb" do |mysql|
-      mysql.vm.network "private_network", ip: "192.168.50.4"
+      mysql.vm.network "public_network", ip: "192.168.1.20"
 
       mysql.vm.provision "shell", inline: $script_mysql
 
@@ -25,7 +25,7 @@ Vagrant.configure("2") do |config|
 
     config.vm.define "phpweb" do |phpweb|
       phpweb.vm.network "forwarded_port", guest: 8888, host: 8888
-      phpweb.vm.network "private_network", ip: "192.168.50.4"
+      phpweb.vm.network "public_network", ip: "192.168.1.21"
 
       phpweb.vm.provision "shell", 
         inline: "apt-get update && apt-get install -y puppet"
@@ -37,19 +37,20 @@ Vagrant.configure("2") do |config|
     end
     
     config.vm.define "mysqlserver" do |mysqlserver|
-      mysqlserver.vm.network "private_network", ip: "192.168.50.4"
+      mysqlserver.vm.network "public_network", ip: "192.168.1.22"
 
       mysqlserver.vm.provision "shell",
         inline: "cat /vagrant/configs/id_bionic.pub >> .ssh/authorized_keys"
     end
 
     config.vm.define "ansible" do |ansible|
-      ansible.vm.network "private_network", ip: "192.168.50.4"
+      ansible.vm.network "public_network", ip: "192.168.1.23"
 
       ansible.vm.provision "shell",
-        inline: "cp /vagrant/id_bionic  /home/vagrant && \
-                chmod 600 /home/vagrant/id_bionic"
-
+        inline: "cp /vagrant/indbionic /home/vagrant && \
+                chmod 600 /home/vagrant/id_bionic && \
+                chown vagrant:vagrant /home/vagrant/id_bionic"
+                
       ansible.vm.provision "shell",
         inline: "apt-get update && \
                 apt-get install -y software-properties-common && \
