--- a/Vagrant/ambiente_dev/bionic/Vagrantfile
+++ b/Vagrant/ambiente_dev/bionic/Vagrantfile
@@ -6,6 +6,10 @@ SCRIPT
 
 Vagrant.configure("2") do |config|
     config.vm.box = "ubuntu/bionic64"
+    config.vm.provider "virtualbox" do |vb|
+      vb.memory = 512
+      vb.cpus = 1
+    end
 
     # config.vm.define "mysqldb" do |mysql|
     #   mysql.vm.network "public_network", ip: "192.168.1.20"
@@ -33,6 +37,12 @@ Vagrant.configure("2") do |config|
       phpweb.vm.provision "puppet" do |puppet|
         puppet.manifests_path = "./configs/manifest"
         puppet.manifest_file = "phpweb.pp"
+      end
+
+      phpweb.vm.provider "virtualbox" do |vb|
+        vb.memory = 1024
+        vb.cpus = 1
+        vb.name = "ubuntu_bionic_php7"
       end
     end
     
