--- a/Vagrant/ambiente_dev/bionic/Vagrantfile
+++ b/Vagrant/ambiente_dev/bionic/Vagrantfile
@@ -6,6 +6,7 @@ SCRIPT
 
 Vagrant.configure("2") do |config|
     config.vm.box = "ubuntu/bionic64"
+
     config.vm.provider "virtualbox" do |vb|
       vb.memory = 512
       vb.cpus = 1
@@ -72,5 +73,13 @@ Vagrant.configure("2") do |config|
                 /vagrant/configs/ansible/playbook.yml"
     end
 
+    config.vm.define "memcached" do |memcached|
+      memcached.vm.box = "centos/7"
+      memcached.vm.provider "virtualbox" do |vb|
+          vb.memory = 512
+          vb.cpus = 1
+          vb.name = "centos7_memcached"
+      end
+    end
 
   end
