--- a/Vagrant/ambiente_dev/wordpress_com_ansible/Vagrantfile
+++ b/Vagrant/ambiente_dev/wordpress_com_ansible/Vagrantfile
@@ -6,8 +6,8 @@ Vagrant.configure("2") do |config|
         v.memory = 1024
     end
 
-    config.vm.define "wordpress" do |m|
-        m.vm.network "private_network", ip: "192.168.50.4"
+    config.vm.define "wordpress" do |word|
+        word.vm.network "private_network", ip: "192.168.50.4"
     end
 
 end
