--- a/Vagrant/ambiente_dev/wordpress_com_ansible/provisioning.yml
+++ b/Vagrant/ambiente_dev/wordpress_com_ansible/provisioning.yml
@@ -1,3 +1,16 @@
 - hosts: all
-  tasks: 
-   - shell: 'echo hello > /vagrant/world.txt'
+  tasks:
+    - name: 'Instala o PHP5'
+      apt:
+        name: php5
+        state: latest
+      become: yes
+    - name: 'Instala o Apache2'
+      apt: 
+        name: apache2
+        state:latest
+      become: yes
+    - name: 'Instala o modpp'
+      apt: 
+        name: libapache2-mod-php5
+        state:latest
