--- a/Vagrant/ambiente_dev/wordpress_com_ansible/provisioning.yml
+++ b/Vagrant/ambiente_dev/wordpress_com_ansible/provisioning.yml
@@ -29,3 +29,33 @@
         password: 12345
         priv: 'wordpress_db.*:ALL'
         state: present
+
+- name: 'Baixa o arquivo de instalacao do Wordpress'
+  get_url:
+    url: 'https://wordpress.org/latest.tar.gz'
+    dest: '/tmp/wordpress.tar.gz'
+
+- name: 'Descompacta o wordpress'
+  unarchive:
+    src: '/tmp/wordpress.tar.gz'
+    dest: /var/www/
+    remote_src: yes
+  become: yes
+
+- copy:
+    src: '/var/www/wordpress/wp-config-sample.php'
+    dest: '/var/www/wordpress/wp-config.php'
+    remote_src: yes
+  become: yes
+
+- name: 'Configura o wp-config com as entradas do banco de dados'     
+  replace:
+    path: '/var/www/wordpress/wp-config.php'
+    regexp: "{{ item.regex }}"
+    replace: "{{ item.value }}"
+    backup: yes
+  with_items:
+    - { regex: 'database_name_here', value: 'wordpress_db'}
+    - { regex: 'username_here', value: 'wordpress_user'}
+    - { regex: 'password_here', value: '12345'}
+  become: yes
