--- a/Vagrant/ambiente_dev/wordpress_com_ansible/provisioning.yml
+++ b/Vagrant/ambiente_dev/wordpress_com_ansible/provisioning.yml
@@ -1,4 +1,11 @@
 - hosts: all
+  handlers:
+    - name: restart apache
+      service:
+        name: apache2
+        state: restarted
+      become: yes
+
   tasks:
     - name: 'Instala pacotes de dependencia do sistema operacional'
       apt:
@@ -59,3 +66,11 @@
     - { regex: 'username_here', value: 'wordpress_user'}
     - { regex: 'password_here', value: '12345'}
   become: yes
+
+- name: 'Configura Apache para servir o Wordpress'
+  copy:
+   src: 'files/000-default.conf'
+   dest: '/etc/apache2/sites-available/000-default.conf'
+  become: yes
+  notify:
+  - restart apache
