separando mysql e wordpress em maquinas distintas

--- a/Vagrant/ambiente_dev/wordpress_com_ansible/provisioning.yml
+++ b/Vagrant/ambiente_dev/wordpress_com_ansible/provisioning.yml
@@ -1,4 +1,50 @@
-- hosts: all
+---
+- hosts: database
+  handlers:
+    - name: restart mysql
+      service: 
+        name: mysql
+        state: restart
+      become: yes
+      
+  tasks:
+    - name: 'Instala pacotes de dependencia do sistema operacional'
+      apt:
+       name: "{{ item }}"
+       state: latest
+      became: yes
+      with_items:
+       - mysql-server-5.6
+       - python-mysqldb
+
+    - name: 'Cria o banco do MySQL'
+      mysql_db: 
+        name: wordpress_db
+        login_user: root
+        state: present
+
+    - name: 'Cria o usuário do MySQL'
+      mysql_user:
+        login_user: root
+        name: wordpress_user
+        password:12345
+        priv: 'wordpress_db.*:ALL'
+        state: present
+        host: "{{ item }}"
+      with_items:
+        - 'localhost'
+        - '127.0.0.1'
+        - '172.17.177.40'
+
+    - name: 'Configura MySQL para aceitar conexões remotas'
+      copy:
+        src: 'files/my.cnf'
+        dest: '/etc/mysql/my.cnf'
+      become: yes
+      notify:
+        - restart mysql
+
+- hosts: wordpress
   handlers:
     - name: restart apache
       service:
@@ -19,58 +65,43 @@
         - php5-gd
         - libssh2-php
         - php5-mcrypt
-        - mysql-server-5.6
-        - python-mysqldb
         - php5-mysql
 
-    - name: 'Cria o banco do MySQL'
-      mysql_db: 
-        name: wordpress_db
-        login_user: root
-        state: present
+    - name: 'Baixa o arquivo de instalacao do Wordpress'
+      get_url:
+        url: 'https://wordpress.org/latest.tar.gz'
+        dest: '/tmp/wordpress.tar.gz'
 
-- name: 'Cria o usuário do MySQL'
-    mysql_user:
-        login_user: root
-        name: wordpress_user
-        password: 12345
-        priv: 'wordpress_db.*:ALL'
-        state: present
+    - name: 'Descompacta o wordpress'
+      unarchive:
+        src: '/tmp/wordpress.tar.gz'
+        dest: /var/www/
+        remote_src: yes
+      become: yes
 
-- name: 'Baixa o arquivo de instalacao do Wordpress'
-  get_url:
-    url: 'https://wordpress.org/latest.tar.gz'
-    dest: '/tmp/wordpress.tar.gz'
+    - copy:
+        src: '/var/www/wordpress/wp-config-sample.php'
+        dest: '/var/www/wordpress/wp-config.php'
+        remote_src: yes
+      become: yes
 
-- name: 'Descompacta o wordpress'
-  unarchive:
-    src: '/tmp/wordpress.tar.gz'
-    dest: /var/www/
-    remote_src: yes
-  become: yes
+    - name: 'Configura o wp-config com as entradas do banco de dados'     
+      replace:
+        path: '/var/www/wordpress/wp-config.php'
+        regexp: "{{ item.regex }}"
+        replace: "{{ item.value }}"
+        backup: yes
+      with_items:
+        - { regex: 'database_name_here', value: 'wordpress_db'}
+        - { regex: 'username_here', value: 'wordpress_user'}
+        - { regex: 'password_here', value: '12345'}
+        - { regex: 'localhost', value: '171.17.177.42'}
+      become: yes
 
-- copy:
-    src: '/var/www/wordpress/wp-config-sample.php'
-    dest: '/var/www/wordpress/wp-config.php'
-    remote_src: yes
-  become: yes
-
-- name: 'Configura o wp-config com as entradas do banco de dados'     
-  replace:
-    path: '/var/www/wordpress/wp-config.php'
-    regexp: "{{ item.regex }}"
-    replace: "{{ item.value }}"
-    backup: yes
-  with_items:
-    - { regex: 'database_name_here', value: 'wordpress_db'}
-    - { regex: 'username_here', value: 'wordpress_user'}
-    - { regex: 'password_here', value: '12345'}
-  become: yes
-
-- name: 'Configura Apache para servir o Wordpress'
-  copy:
-   src: 'files/000-default.conf'
-   dest: '/etc/apache2/sites-available/000-default.conf'
-  become: yes
-  notify:
-  - restart apache
+    - name: 'Configura Apache para servir o Wordpress'
+      copy:
+      src: 'files/000-default.conf'
+      dest: '/etc/apache2/sites-available/000-default.conf'
+      become: yes
+      notify:
+      - restart apache
