--- a/Vagrant/ambiente_dev/wordpress_com_ansible/Vagrantfile
+++ b/Vagrant/ambiente_dev/wordpress_com_ansible/Vagrantfile
@@ -7,7 +7,10 @@ Vagrant.configure("2") do |config|
     end
 
     config.vm.define "wordpress" do |word|
-        word.vm.network "private_network", ip: "192.168.50.4"
+        word.vm.network "private_network", ip: "172.17.177.42"
     end
 
+    config.vm.define "wordpress" do |m|
+        m.vm.network "private_network", ip: "172.17.177.40"
+    end
 end
