--- a/Kubernetes/portal-noticias/portal-noticias-deployment.yml
+++ b/Kubernetes/portal-noticias/portal-noticias-deployment.yml
@@ -17,6 +17,13 @@ spec:
           envFrom:
             - configMapRef:
                 name: portal-configmap
+          LivenessProbe:
+            httpGet:
+              path: /
+              port: 80
+            periodSeconds: 10
+            failureThreshold: 3
+            initialDelaySeconds: 20
   replicas: 3
   selector:
     matchLabels:
