--- a/Kubernetes/portal-noticias/sistema-noticias-deployment.yml
+++ b/Kubernetes/portal-noticias/sistema-noticias-deployment.yml
@@ -17,6 +17,13 @@ spec:
           envFrom:
             - configMapRef:
                 name: sistema-configmap
+          LivenessProbe:
+            httpGet:
+              path: /
+              port: 80
+            periodSeconds: 10
+            failureThreshold: 3
+            initialDelaySeconds: 20
   replicas: 1
   selector:
     matchLabels:
