--- a/Kubernetes/portal-noticias/portal-noticias-deployment.yml
+++ b/Kubernetes/portal-noticias/portal-noticias-deployment.yml
@@ -17,13 +17,20 @@ spec:
           envFrom:
             - configMapRef:
                 name: portal-configmap
-          LivenessProbe:
+          livenessProbe:
             httpGet:
               path: /
               port: 80
             periodSeconds: 10
             failureThreshold: 3
             initialDelaySeconds: 20
+          readlinessProbe:
+            httpGet:
+              path: /
+              port: 80
+            periodSeconds: 10
+            failureThreshold: 5
+            initialDelaySeconds: 3
   replicas: 3
   selector:
     matchLabels:
