gitlab - subindo imagem no dockerhub pela pipeline

--- a/Gitlab/devops-master/.gitlab-ci.yml
+++ b/Gitlab/devops-master/.gitlab-ci.yml
@@ -5,8 +5,11 @@ services:
 
 before_script:
 - docker info
+- docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD
 
 build-docker:
     stage: build
     script: 
     - docker build -t minha-imagem .
+    - docker tag minha-imagem leoalmeida95/minha-imagem:latest
+    - docker push leoalmeida95/minha-imagem:latest
