--- a/Gitlab/devops-master/.gitlab-ci.yml
+++ b/Gitlab/devops-master/.gitlab-ci.yml
@@ -5,6 +5,7 @@ stages:
 - build
 - test
 - deploy
+- notificacao
 
 build-docker:
     services:
@@ -84,3 +85,19 @@ deploy-project:
     - tar cfz arquivos.tgz *
     - scp arquivos.tgz leoal@192.168.1.34:/Users/shared/deploys/
     - ssh leoal@192.168.1.34 'cd /Users/shared/deploys/; tar xfz arquivos.tgz; /usr/local/bin/docker-compose up -d'
+
+notificacao-sucesso:
+    stage: notificacao
+    tags:
+    - executor-deploy
+    when: on_success
+    script:
+    - sh notificacaoSucesso.sh
+
+notificacao-falhas:
+    stage: notificacao
+    tags:
+    - executor-deploy
+    when: on_failure
+    script:
+    - sh notificacaoFalha.sh
